--- a/frontend/scss/main.scss
+++ b/frontend/scss/main.scss
@@ -115,7 +115,9 @@ body{
       }
     }
   }
-
+  section, footer{
+    scroll-margin-top: 4.75rem;
+  }
   section {
     &:nth-child(even) > .container {
       background-color: $p-purple-3;
@@ -129,7 +131,6 @@ body{
       & > .row > div {
         padding: 3rem 2rem;
       }
-      scroll-margin-top: 4.75rem;
     }
     .row{
       .img-cute-border{
@@ -138,6 +139,13 @@ body{
         border-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='100' height='100' viewBox='0 0 100 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E %3ClinearGradient id='g' x1='0%25' y1='0%25' x2='0%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%23cffffe' /%3E%3Cstop offset='25%25' stop-color='%23f9f7d9' /%3E%3Cstop offset='50%25' stop-color='%23fce2ce' /%3E%3Cstop offset='100%25' stop-color='%23ffc1f3' /%3E%3C/linearGradient%3E %3Cpath d='M1.5 1.5 l97 0l0 97l-97 0 l0 -97' stroke-linecap='square' stroke='url(%23g)' stroke-width='3'/%3E %3C/svg%3E") 1;
       }
     }
+  }
+
+  footer{
+    background: rgba($p-purple-1, 0.8);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
   }
 
 }
