--- a/frontend/scss/main.scss
+++ b/frontend/scss/main.scss
@@ -195,9 +195,10 @@ body{
         flex-flow: column;
         justify-content: left;
         textarea{
+          min-height: 4rem;
           height: 5rem;
         }
-        input[type="text"], textarea{
+        input:not([type="checkbox"],[type="submit"]), textarea{
           min-width: 22.5rem;
           border-radius: 0.5rem;
           border: 0 solid;
@@ -228,8 +229,8 @@ body{
             transform: scale(1);
           }
         }
-        input[type="submit"]{
-          color: $white;
+        input[type="submit"], button{
+          color: $white !important;
           border-radius: 0.5rem;
           border: 0;
           padding: 0.25rem 1rem;
